--- a/views/post.ejs
+++ b/views/post.ejs
@@ -22,6 +22,24 @@
           <button class="btn btn-primary fa fa-trash" type="submit"></button>
         </form>
         <%}%>
+        <h3>Comments:</h3>
+        <ul>
+          <% for(var i=0; i<comments.length; i++) {%>
+            <li class="col-6 justify-content-between mt-5">
+              <%= comments[i].comment%>
+            </li>
+          <% } %>
+        </ul>
+        <div class="mt-5">
+          <h2>Add a comment</h2>
+          <form action="/post/createComment/<%=post._id%>" method="POST">
+            <div class="mb-3">
+              <label for="caption" class="form-label">Comment</label>
+              <textarea class="form-control" id="caption" name="comment"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
       </div>
     </div>
     <div class="col-3 mt-5">
